--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
     "jquery-ui": "~1.10.4",
     "ng-grid": "~2.0.7",
     "angular-bootstrap": "~0.10.0",
-    "fontawesome": "~4.0.3",
-    "angular-upload": "~1.0.6"
+    "components-font-awesome": "~4.0.3",
+    "blueimp-file-upload": "~9.5.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
