--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "ng-grid": "~2.0.7",
     "angular-bootstrap": "~0.10.0",
     "components-font-awesome": "~4.0.3",
-    "blueimp-file-upload": "~9.5.7"
+    "blueimp-file-upload": "~9.5.7",
+    "angular-ui-sortable": "~0.12.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
