--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "grunt-karma": "~0.8.2",
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
-    "grunt-contrib-less": "~0.11.0"
+    "grunt-contrib-less": "^0.11.0",
+    "connect-rest": "^0.9.7",
+    "generator-karma": "^0.7.0",
+    "grunt-cli": "^0.1.13",
+    "bower": "^1.3.2",
+    "yo": "^1.1.2",
+    "generator-angular": "^0.8.0"
   },
   "engines": {
     "node": ">=0.10.0"
