--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-bootstrap": "~0.10.0",
     "components-font-awesome": "~4.0.3",
     "blueimp-file-upload": "~9.5.7",
-    "angular-ui-sortable": "~0.12.4"
+    "angular-ui-sortable": "~0.12.4",
+    "angular-wizard": "~0.3.0",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
